[package]
name = "rtsp-types"
version = "0.0.3"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/rtsp-types"
edition = "2018"
license = "MIT"
keywords = ["rtsp", "network", "protocol", "multimedia", "streaming"]
categories = ["network-programming", "multimedia"]
description = "RTSP (RFC 7826) types, parser and serializer"
readme = "README.md"

[dependencies]
nom = "7.0"
cookie-factory = "0.3"
tinyvec = "1.0"
url = "2.0"
