[package]
name = "rtsp-types"
version = "0.1.2"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://github.com/sdroege/rtsp-types"
edition = "2018"
license = "MIT"
keywords = ["rtsp", "network", "protocol", "multimedia", "streaming"]
categories = ["network-programming", "multimedia"]
description = "RTSP (RFC 7826) types, parser and serializer"
readme = "README.md"
rust-version = "1.65"

[dependencies]
nom = "7.0"
cookie-factory = "0.3"
tinyvec = {version = "1.0", features = ["std", "rustc_1_57"]}
url = "2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde", "tinyvec/serde", "url/serde"]
